force-app/main/default/objects/Inventory__c/fields/On_Order__c.field-meta.xml
<CustomField>
    <fullName>On_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>