force-app/main/default/objects/Inventory__c/fields/Restockk__c.field-meta.xml
<CustomField>
    <fullName>Restockk__c</fullName>
    <formula>Quantity__c  &lt;  Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restock?</label>
    <type>Checkbox</type>
</CustomField>