force-app/main/default/objects/Inventory__c/fields/Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Shortfall__c</fullName>
    <formula>( Quantity__c   -  On_Order__c- Stock_On_Hand__c -  Order__c -   Product__r.Total_Quantity__c    ) +Product__r.Rejected_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>