force-app/main/default/objects/Inventory__c/fields/Stock_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Stock_On_Hand__c</fullName>
    <formula>Product__r.Approved_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>