force-app/main/default/objects/Inventory__c/fields/Under_QA__c.field-meta.xml
<CustomField>
    <fullName>Under_QA__c</fullName>
    <formula>Product__r.Total_Quantity__c -  Product__r.Approved_Quantity__c - Product__r.Rejected_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under QA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>