force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>On_Order__c</columns>
    <columns>Stock_On_Hand__c</columns>
    <columns>Order__c</columns>
    <columns>Shortfall__c</columns>
    <columns>Under_QA__c</columns>
    <columns>Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>